--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cypress-headed": "cypress run --headed -b chrome"
   },
   "author": "",
   "license": "ISC",
@@ -20,5 +21,8 @@
     "eslint-plugin-react": "^7.31.8",
     "husky": "^8.0.1",
     "prettier": "^2.7.1"
+  },
+  "dependencies": {
+    "cypress-file-upload": "^5.0.8"
   }
 }
